# vacation_manager

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  sqlite_db  website_start.py
.github/workflows/: docker-image.yml
setup_template/: setup.html
website/: __init__.py  app.py  config_init.py  data.db  directions.py  forms.py  make_blank_db.py  models.py  schema.sql  view.py
website/database/: .gitignore
website/templates/: admin.html  base.html  edit.html  edit_request.html  email.html  home.html  login.html  manage_request.html  manage_users.html  new_request.html  permission.html  protected_area.html  request_vacation.html  setup.html  setup_google.html  setup_microsoft.html  sign_up.html
