[tool.poetry]
name = "vacation_manager"
version = "0.1.0"
description = ""
authors = ["ktomi96 <kokai.tamas.96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
